Tambah konten gallery, gambar masih dummy

--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,7 @@ foot {
 [class*="col-"] {
   padding: 1rem;
 }
+
+/*========================= GALERI =============================*/
+
+/*========================= GALERI =============================*/
