--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,11 @@ footer {
   background-color: #40474e;
   background-size: cover;
   color: white;
-  max-height: 40px;
+
 }
 footer .row {
-  padding: 1.5rem 0 4rem;
-  line-height: 2rem;
+  /* padding: 1.5rem 0 4rem; */
+  /* line-height: 2rem; */
 }
 footer img {
   margin: 1.5rem 0;
