Tambah halaman pemesanan

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,13 @@ foot {
   padding: 1rem;
 }
 
+.card {
+  min-height: ;
+}
+
+
+
+
 /*========================= GALERI =============================*/
 
 /*========================= GALERI =============================*/
